Update 0184: Add success-6 data

--- a/0184-2023-12-05.md
+++ b/0184-2023-12-05.md
@@ -909,6 +909,172 @@ Antennas:             openlane/user_project_wrapper/runs/success-5/reports/signo
 *   **With AREA1**
 *   Compare this to success-1
 
+```
+SELECTED design run:  >>>  success-6  <<<  (openlane/top_raybox_zero_fsm/runs/success-6)
+
+|          Design final GDS size |       24M (24550812) |
+|        Design macro dimensions |              797x796 |
+|      (summary.py temp run num) |                    5 |
+|                   Flow success |                  Yes |
+|                  total_runtime |              0:15:35 |
+|                   FP_CORE_UTIL |                   49 |
+|              PL_TARGET_DENSITY |                 0.55 |
+|                    OpenDP_Util |               50.55% |
+|               synth_cell_count |                14422 |
+|         net_antenna_violations |                    0 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                15694 |
+|                    CoreArea_um |          634125.2288 |
+|                   NonPhysCells |                15306 |
+|                   CLOCK_PERIOD |                   39 |
+Setup, slews, caps:   openlane/top_raybox_zero_fsm/runs/success-6/reports/signoff/37-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      1.33   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 1443
+    max cap violations count Typical: 0
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    o_tex_sclk                              3.00    3.12   -0.12 (VIOLATED)
+    output44/Z                              3.00    3.12   -0.12 (VIOLATED)
+    o_gpout[2]                              3.00    3.11   -0.11 (VIOLATED)
+    output33/Z                              3.00    3.11   -0.11 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    clkbuf_5_8__f_i_clk/Z                     4     32    -28 (VIOLATED)
+    clkbuf_5_2__f_i_clk/Z                     4     28    -24 (VIOLATED)
+    clkbuf_5_10__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_13__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_14__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_30__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_11__f_i_clk/Z                    4     24    -20 (VIOLATED)
+    clkbuf_5_18__f_i_clk/Z                    4     24    -20 (VIOLATED)
+    clkbuf_5_1__f_i_clk/Z                     4     24    -20 (VIOLATED)
+    clkbuf_5_4__f_i_clk/Z                     4     24    -20 (VIOLATED)
+    
+    Showing worst 10 out of 1443
+    
+
+Max caps:
+    
+    
+    None
+    
+
+Hold slack:   openlane/top_raybox_zero_fsm/runs/success-6/reports/signoff/37-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.4865
+
+Antennas:             openlane/top_raybox_zero_fsm/runs/success-6/reports/signoff/46-antenna_violators.rpt
+    
+    
+    None
+    
+
+Step: UPW
+
+Latest UPW run:  >>>  success-6  <<<  (openlane/user_project_wrapper/runs/success-6)
+
+|          Design final GDS size |       26M (26248136) |
+|        Design macro dimensions |            2956x2952 |
+|      (summary.py temp run num) |                    7 |
+|                   Flow success |                  Yes |
+|                  total_runtime |               0:2:59 |
+|                   FP_CORE_UTIL |                   50 |
+|              PL_TARGET_DENSITY |                  0.6 |
+|                    OpenDP_Util |                  -1% |
+|               synth_cell_count |                    1 |
+|         net_antenna_violations |                   15 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                    1 |
+|                    CoreArea_um |         8724457.9968 |
+|                   NonPhysCells |                    1 |
+|                   CLOCK_PERIOD |                   40 |
+Setup, slews, caps:   openlane/user_project_wrapper/runs/success-6/reports/signoff/20-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      2.48   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 35
+    max cap violations count Typical: 2
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    io_out[17]                              3.00    7.66   -4.66 (VIOLATED)
+    top_raybox_zero_fsm/output44/Z          3.00    7.63   -4.63 (VIOLATED)
+    io_out[37]                              3.00    7.29   -4.29 (VIOLATED)
+    top_raybox_zero_fsm/output33/Z          3.00    7.26   -4.26 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/clkbuf_5_8__f_i_clk/Z     10     32    -22 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_2__f_i_clk/Z     10     28    -18 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_10__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_13__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_14__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_30__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_11__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_18__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_1__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_4__f_i_clk/Z     10     24    -14 (VIOLATED)
+    
+    Showing worst 10 out of 37
+    
+
+Max caps:
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/output44/Z          0.24    0.48   -0.24 (VIOLATED)
+    top_raybox_zero_fsm/output33/Z          0.24    0.46   -0.22 (VIOLATED)
+    
+    Showing all 2
+    
+
+Hold slack:   openlane/user_project_wrapper/runs/success-6/reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.6365
+
+Antennas:             openlane/user_project_wrapper/runs/success-6/reports/signoff/30-antenna_violators.rpt
+    Partial/Required:  3.29, Required:    400.0, Partial:  1315.47, Net: io_in[24], Pin: top_raybox_zero_fsm/i_vec_mosi, Layer: Metal4
+    Partial/Required:  3.03, Required:    400.0, Partial:  1212.88, Net: io_in[34], Pin: top_raybox_zero_fsm/i_mode[2], Layer: Metal3
+    Partial/Required:  2.36, Required:    400.0, Partial:   943.67, Net: io_in[29], Pin: top_raybox_zero_fsm/i_debug_map_overlay, Layer: Metal3
+    Partial/Required:  2.35, Required:    400.0, Partial:   938.63, Net: io_in[31], Pin: top_raybox_zero_fsm/i_reg_outs_enb, Layer: Metal3
+    Partial/Required:  2.31, Required:    400.0, Partial:   925.13, Net: io_in[26], Pin: top_raybox_zero_fsm/i_reg_sclk, Layer: Metal4
+    Partial/Required:  2.21, Required:    400.0, Partial:   883.55, Net: io_in[25], Pin: top_raybox_zero_fsm/i_reg_csb, Layer: Metal4
+    Partial/Required:  2.04, Required:    400.0, Partial:   817.78, Net: io_in[33], Pin: top_raybox_zero_fsm/i_mode[1], Layer: Metal3
+    Partial/Required:  2.03, Required:    400.0, Partial:   811.91, Net: io_in[28], Pin: top_raybox_zero_fsm/i_debug_vec_overlay, Layer: Metal3
+    Partial/Required:  2.02, Required:    400.0, Partial:   809.92, Net: io_in[24], Pin: top_raybox_zero_fsm/i_vec_mosi, Layer: Metal3
+    Partial/Required:  2.02, Required:    400.0, Partial:   808.96, Net: io_in[27], Pin: top_raybox_zero_fsm/i_reg_mosi, Layer: Metal4
+    
+    Showing worst 10 out of 21
+```
+
+
 
 # WIP
 
