Update 0184: success-7 data

--- a/0184-2023-12-05.md
+++ b/0184-2023-12-05.md
@@ -1081,9 +1081,175 @@ Antennas:             openlane/user_project_wrapper/runs/success-6/reports/signo
 *   AREA1=>AREA2
 
 
-# Next
+# success-7
 
 *   AREA2=>AREA3
+
+
+```
+SELECTED design run:  >>>  success-7  <<<  (openlane/top_raybox_zero_fsm/runs/success-7)
+
+|          Design final GDS size |       28M (28545446) |
+|        Design macro dimensions |              815x811 |
+|      (summary.py temp run num) |                   15 |
+|                   Flow success |                  Yes |
+|                  total_runtime |              0:19:25 |
+|                   FP_CORE_UTIL |                   49 |
+|              PL_TARGET_DENSITY |                 0.55 |
+|                    OpenDP_Util |               50.71% |
+|               synth_cell_count |                18825 |
+|         net_antenna_violations |                    0 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                15694 |
+|                    CoreArea_um |           661161.312 |
+|                   NonPhysCells |                19716 |
+|                   CLOCK_PERIOD |                   39 |
+Setup, slews, caps:   openlane/top_raybox_zero_fsm/runs/success-7/reports/signoff/37-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      8.72   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 1248
+    max cap violations count Typical: 0
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    o_gpout[2]                              3.00    3.13   -0.13 (VIOLATED)
+    output33/Z                              3.00    3.13   -0.13 (VIOLATED)
+    o_tex_sclk                              3.00    3.10   -0.10 (VIOLATED)
+    output44/Z                              3.00    3.10   -0.10 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    clkbuf_5_1__f_i_clk/Z                     4     30    -26 (VIOLATED)
+    clkbuf_5_0__f_i_clk/Z                     4     28    -24 (VIOLATED)
+    clkbuf_5_20__f_i_clk/Z                    4     28    -24 (VIOLATED)
+    clkbuf_5_2__f_i_clk/Z                     4     28    -24 (VIOLATED)
+    clkbuf_5_16__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_17__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_21__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_5__f_i_clk/Z                     4     26    -22 (VIOLATED)
+    clkbuf_5_22__f_i_clk/Z                    4     24    -20 (VIOLATED)
+    clkbuf_5_3__f_i_clk/Z                     4     24    -20 (VIOLATED)
+    
+    Showing worst 10 out of 1248
+    
+
+Max caps:
+    
+    
+    None
+    
+
+Hold slack:   openlane/top_raybox_zero_fsm/runs/success-7/reports/signoff/37-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.3305
+
+Antennas:             openlane/top_raybox_zero_fsm/runs/success-7/reports/signoff/46-antenna_violators.rpt
+    
+    
+    None
+    
+
+Step: UPW
+
+Latest UPW run:  >>>  success-7  <<<  (openlane/user_project_wrapper/runs/success-7)
+
+|          Design final GDS size |       29M (30250194) |
+|        Design macro dimensions |            2956x2952 |
+|      (summary.py temp run num) |                   12 |
+|                   Flow success |                  Yes |
+|                  total_runtime |                0:3:3 |
+|                   FP_CORE_UTIL |                   50 |
+|              PL_TARGET_DENSITY |                  0.6 |
+|                    OpenDP_Util |                  -1% |
+|               synth_cell_count |                    1 |
+|         net_antenna_violations |                   20 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                    1 |
+|                    CoreArea_um |         8724457.9968 |
+|                   NonPhysCells |                    1 |
+|                   CLOCK_PERIOD |                   40 |
+Setup, slews, caps:   openlane/user_project_wrapper/runs/success-7/reports/signoff/20-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      9.87   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 33
+    max cap violations count Typical: 2
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    io_out[17]                              3.00   10.40   -7.40 (VIOLATED)
+    top_raybox_zero_fsm/output44/Z          3.00   10.32   -7.32 (VIOLATED)
+    io_out[37]                              3.00    5.65   -2.65 (VIOLATED)
+    top_raybox_zero_fsm/output33/Z          3.00    5.63   -2.63 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/clkbuf_5_1__f_i_clk/Z     10     30    -20 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_0__f_i_clk/Z     10     28    -18 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_20__f_i_clk/Z     10     28    -18 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_2__f_i_clk/Z     10     28    -18 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_16__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_17__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_21__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_5__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_22__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_3__f_i_clk/Z     10     24    -14 (VIOLATED)
+    
+    Showing worst 10 out of 35
+    
+
+Max caps:
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/output44/Z          0.24    0.65   -0.42 (VIOLATED)
+    top_raybox_zero_fsm/output33/Z          0.24    0.35   -0.11 (VIOLATED)
+    
+    Showing all 2
+    
+
+Hold slack:   openlane/user_project_wrapper/runs/success-7/reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.4803
+
+Antennas:             openlane/user_project_wrapper/runs/success-7/reports/signoff/30-antenna_violators.rpt
+    Partial/Required:  4.11, Required:    400.0, Partial:  1643.38, Net: io_in[18], Pin: top_raybox_zero_fsm/i_tex_in[0], Layer: Metal4
+    Partial/Required:  4.08, Required:    400.0, Partial:  1631.85, Net: io_in[19], Pin: top_raybox_zero_fsm/i_tex_in[1], Layer: Metal4
+    Partial/Required:  3.18, Required:    400.0, Partial:   1273.5, Net: io_in[30], Pin: top_raybox_zero_fsm/i_debug_trace_overlay, Layer: Metal3
+    Partial/Required:  2.65, Required:    400.0, Partial:  1058.05, Net: io_in[31], Pin: top_raybox_zero_fsm/i_reg_outs_enb, Layer: Metal3
+    Partial/Required:  2.52, Required:    400.0, Partial:  1006.06, Net: io_in[24], Pin: top_raybox_zero_fsm/i_vec_mosi, Layer: Metal3
+    Partial/Required:  2.51, Required:    400.0, Partial:  1003.74, Net: io_in[26], Pin: top_raybox_zero_fsm/i_reg_sclk, Layer: Metal3
+    Partial/Required:  2.51, Required:    400.0, Partial:  1002.92, Net: io_in[25], Pin: top_raybox_zero_fsm/i_reg_csb, Layer: Metal3
+    Partial/Required:  2.48, Required:    400.0, Partial:   993.53, Net: wb_rst_i, Pin: top_raybox_zero_fsm/i_reset, Layer: Metal3
+    Partial/Required:  2.46, Required:    400.0, Partial:   982.83, Net: io_in[27], Pin: top_raybox_zero_fsm/i_reg_mosi, Layer: Metal3
+    Partial/Required:  2.45, Required:    400.0, Partial:   980.63, Net: io_in[28], Pin: top_raybox_zero_fsm/i_debug_vec_overlay, Layer: Metal3
+    
+    Showing worst 10 out of 21
+```
 
 
 
