Update 0184: success-8 data

--- a/0184-2023-12-05.md
+++ b/0184-2023-12-05.md
@@ -910,9 +910,176 @@ Antennas:             openlane/user_project_wrapper/runs/success-5/reports/signo
 *   Compare this to success-1
 
 
-# WIP
+# success-8
 
+*   NOTE: This appears to follow success-6, but was completed after success-7 below (running in parallel)
 *   AREA1=>AREA2
+*   Had to change FCU 49..50 due to Step 20 crash
+
+```
+SELECTED design run:  >>>  success-8  <<<  (openlane/top_raybox_zero_fsm/runs/success-8)
+
+|          Design final GDS size |       24M (24387704) |
+|        Design macro dimensions |              787x784 |
+|      (summary.py temp run num) |                    0 |
+|                   Flow success |                  Yes |
+|                  total_runtime |              0:12:16 |
+|                   FP_CORE_UTIL |                   50 |
+|              PL_TARGET_DENSITY |                 0.55 |
+|                    OpenDP_Util |               51.72% |
+|               synth_cell_count |                14427 |
+|         net_antenna_violations |                    1 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                15694 |
+|                    CoreArea_um |            617290.24 |
+|                   NonPhysCells |                15300 |
+|                   CLOCK_PERIOD |                   39 |
+Setup, slews, caps:   openlane/top_raybox_zero_fsm/runs/success-8/reports/signoff/37-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      2.91   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 1440
+    max cap violations count Typical: 0
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    o_tex_sclk                              3.00    3.12   -0.12 (VIOLATED)
+    output44/Z                              3.00    3.12   -0.12 (VIOLATED)
+    o_gpout[2]                              3.00    3.11   -0.11 (VIOLATED)
+    output33/Z                              3.00    3.11   -0.11 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    clkbuf_5_0__f_i_clk/Z                     4     30    -26 (VIOLATED)
+    clkbuf_5_2__f_i_clk/Z                     4     30    -26 (VIOLATED)
+    clkbuf_5_5__f_i_clk/Z                     4     30    -26 (VIOLATED)
+    clkbuf_5_1__f_i_clk/Z                     4     28    -24 (VIOLATED)
+    clkbuf_5_21__f_i_clk/Z                    4     28    -24 (VIOLATED)
+    clkbuf_5_24__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_11__f_i_clk/Z                    4     24    -20 (VIOLATED)
+    clkbuf_5_26__f_i_clk/Z                    4     24    -20 (VIOLATED)
+    clkbuf_5_30__f_i_clk/Z                    4     24    -20 (VIOLATED)
+    clkbuf_5_17__f_i_clk/Z                    4     22    -18 (VIOLATED)
+    
+    Showing worst 10 out of 1440
+    
+
+Max caps:
+    
+    
+    None
+    
+
+Hold slack:   openlane/top_raybox_zero_fsm/runs/success-8/reports/signoff/37-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.3327
+
+Antennas:             openlane/top_raybox_zero_fsm/runs/success-8/reports/signoff/46-antenna_violators.rpt
+    Partial/Required:  1.29, Required:    400.0, Partial:   516.31, Net: _11406_, Pin: _18757_/A1, Layer: Metal3
+    
+    Showing all 1
+    
+
+Step: UPW
+
+SELECTED UPW run:  >>>  success-8  <<<  (openlane/user_project_wrapper/runs/success-8)
+
+|          Design final GDS size |       25M (26080932) |
+|        Design macro dimensions |            2956x2952 |
+|      (summary.py temp run num) |                    1 |
+|                   Flow success |                  Yes |
+|                  total_runtime |               0:2:25 |
+|                   FP_CORE_UTIL |                   50 |
+|              PL_TARGET_DENSITY |                  0.6 |
+|                    OpenDP_Util |                  -1% |
+|               synth_cell_count |                    1 |
+|         net_antenna_violations |                   16 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                    1 |
+|                    CoreArea_um |         8724457.9968 |
+|                   NonPhysCells |                    1 |
+|                   CLOCK_PERIOD |                   40 |
+Setup, slews, caps:   openlane/user_project_wrapper/runs/success-8/reports/signoff/20-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      4.06   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 34
+    max cap violations count Typical: 2
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    io_out[17]                              3.00    7.66   -4.66 (VIOLATED)
+    top_raybox_zero_fsm/output44/Z          3.00    7.63   -4.63 (VIOLATED)
+    io_out[37]                              3.00    7.13   -4.13 (VIOLATED)
+    top_raybox_zero_fsm/output33/Z          3.00    7.10   -4.10 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/clkbuf_5_0__f_i_clk/Z     10     30    -20 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_2__f_i_clk/Z     10     30    -20 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_5__f_i_clk/Z     10     30    -20 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_1__f_i_clk/Z     10     28    -18 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_21__f_i_clk/Z     10     28    -18 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_24__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_11__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_26__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_30__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_17__f_i_clk/Z     10     22    -12 (VIOLATED)
+    
+    Showing worst 10 out of 36
+    
+
+Max caps:
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/output44/Z          0.24    0.48   -0.24 (VIOLATED)
+    top_raybox_zero_fsm/output33/Z          0.24    0.45   -0.21 (VIOLATED)
+    
+    Showing all 2
+    
+
+Hold slack:   openlane/user_project_wrapper/runs/success-8/reports/signoff/20-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.4826
+
+Antennas:             openlane/user_project_wrapper/runs/success-8/reports/signoff/30-antenna_violators.rpt
+    Partial/Required:  3.33, Required:    400.0, Partial:  1332.18, Net: io_in[25], Pin: top_raybox_zero_fsm/i_reg_csb, Layer: Metal4
+    Partial/Required:  3.32, Required:    400.0, Partial:   1329.8, Net: io_in[24], Pin: top_raybox_zero_fsm/i_vec_mosi, Layer: Metal4
+    Partial/Required:  2.99, Required:    400.0, Partial:  1196.46, Net: io_in[34], Pin: top_raybox_zero_fsm/i_mode[2], Layer: Metal3
+    Partial/Required:  2.41, Required:    400.0, Partial:   965.02, Net: io_in[26], Pin: top_raybox_zero_fsm/i_reg_sclk, Layer: Metal4
+    Partial/Required:  2.38, Required:    400.0, Partial:   952.15, Net: io_in[25], Pin: top_raybox_zero_fsm/i_reg_csb, Layer: Metal3
+    Partial/Required:  2.07, Required:    400.0, Partial:   827.93, Net: io_in[27], Pin: top_raybox_zero_fsm/i_reg_mosi, Layer: Metal4
+    Partial/Required:  2.04, Required:    400.0, Partial:   816.41, Net: io_in[33], Pin: top_raybox_zero_fsm/i_mode[1], Layer: Metal3
+    Partial/Required:  2.02, Required:    400.0, Partial:   808.96, Net: io_in[24], Pin: top_raybox_zero_fsm/i_vec_mosi, Layer: Metal3
+    Partial/Required:  2.01, Required:    400.0, Partial:   803.92, Net: io_in[26], Pin: top_raybox_zero_fsm/i_reg_sclk, Layer: Metal3
+    Partial/Required:  2.01, Required:    400.0, Partial:    803.9, Net: io_in[30], Pin: top_raybox_zero_fsm/i_debug_trace_overlay, Layer: Metal3
+    
+    Showing worst 10 out of 23
+```
 
 
 # Next
