Update 0184: testA/B prep

--- a/0184-2023-12-05.md
+++ b/0184-2023-12-05.md
@@ -1419,6 +1419,25 @@ Antennas:             openlane/user_project_wrapper/runs/success-7/reports/signo
 ```
 
 
+# testA (/success-1)
+
+*   CP 39=>40
+*   FCU 50..54
+*   PTD 55..57
+
+# testB (/success-1)
+
+*   CP 39=>40
+*   FCU 50..48
+*   PTD 55..53
+*   PL_RESIZER_OVERBUFFER=1, MAX_WIRE_LENGTH=300
+
+# Script to run testA/B via symlinks
+
+```bash
+echo "=== testA ==="; pushd openlane/top_raybox_zero_fsm && rm config.json; ln -s testA-config.json config.json && popd && makeallrbz; \
+echo "=== testB ==="; pushd openlane/top_raybox_zero_fsm && rm config.json; ln -s testB-config.json config.json && popd && makeallrbz
+```
 
 # Next
 
