Update 0184: Adding comparisons

--- a/0184-2023-12-05.md
+++ b/0184-2023-12-05.md
@@ -1419,6 +1419,75 @@ Antennas:             openlane/user_project_wrapper/runs/success-7/reports/signo
 ```
 
 
+# COMPARISONS OF TONIGHT'S RESULTS
+
+*   success-3 vs success-2
+	*   TRZF
+        *   ~same setup slack (slightly worse)
+        *   More fanout vios but less severe (32/44)
+        *   Slew is ~same
+        *   Hold slack slightly better
+	*   UPW
+	    *   ~same setup slack (slightly worse)
+	    *   Slew is slightly worse on 2, a bit better on 2
+	    *   ~same for caps
+	    *   Hold slack is slightly better
+	    *   Antennas ~same
+*   success-4 vs success-3
+	*   TRZF
+	    *   Area increases a bit
+	    *   Better setup slack
+	    *   DOUBLES fanout vios count. Still at 32 max
+	    *   Slew ~same
+	    *   4 antennas now. Worst is 130%
+	    *   Hold slack slightly better
+	*   UPW
+	    *   Better setup slack
+	    *   Slew is notably worse (9.46/7.66)
+	    *   2 caps are now a bit worse
+	    *   Hold slack is a little better
+	    *   Antennas about the same (slightly worse at top end, 351/331) but fewer of them
+*   success-1 vs success-2!!
+	*   TRZF
+	    *   Much smaller area
+	    *   Worse setup slack
+	    *   Caps ~same
+	    *   Less fanout (1510/1707), less severe (30/44)
+	    *   Slight better hold slack
+	*   UPW
+	    *   Worse setup slack
+	    *   Slightly better slew
+	    *   Slightly better caps
+	    *   Slightly better hold slack
+	    *   Antennas ~same
+*   So far success-1 seems the best!
+*   success-6 vs success-1
+	*   TRZF
+	    *   Area ~same
+	    *   Setup slack a little worse
+	    *   Fewer fanouts; about the same severity
+	    *   Slew is same
+	    *   Better hold slack
+	*   UPW
+	    *   Setup slack a little worse
+	    *   Slew is worse
+	    *   Caps a little worse
+	    *   Better hold slack
+	    *   Slightly better antennas
+*   success-7 vs success-1
+	*   TRZF
+	    *   Slightly larger area
+	    *   MUCH better setup slack
+	    *   Fewer fanouts (1248/1510), about the same severity
+	    *   Slew ~same
+	*   UPW
+	    *   MUCH better setup slack
+	    *   io_out[17] has much worse slew (10.40/6.42), but the others are a bit better (5.65/6.42)
+	    *   caps are a bit worse
+	    *   Worse hold slack, but still good
+	    *   Antennas are generally worse (411/335)
+
+
 # testA (/success-1)
 
 *   CP 39=>40
