Update 0184: Add success-9 and next steps

--- a/0184-2023-12-05.md
+++ b/0184-2023-12-05.md
@@ -1419,6 +1419,180 @@ Antennas:             openlane/user_project_wrapper/runs/success-7/reports/signo
 ```
 
 
+# success-9
+
+*   Change pin ordering
+
+```
+SELECTED design run:  >>>  success-9  <<<  (openlane/top_raybox_zero_fsm/runs/success-9)
+
+|          Design final GDS size |       24M (24915574) |
+|        Design macro dimensions |              800x800 |
+|      (summary.py temp run num) |                   19 |
+|                   Flow success |                  Yes |
+|                  total_runtime |              0:13:42 |
+|                   FP_CORE_UTIL |                   49 |
+|              PL_TARGET_DENSITY |                 0.55 |
+|                    OpenDP_Util |               50.48% |
+|               synth_cell_count |                14507 |
+|         net_antenna_violations |                    0 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                15694 |
+|                    CoreArea_um |          639488.1024 |
+|                   NonPhysCells |                15387 |
+|                   CLOCK_PERIOD |                   39 |
+Setup, slews, caps:   openlane/top_raybox_zero_fsm/runs/success-9/reports/signoff/*-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      1.84   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 1510
+    max cap violations count Typical: 0
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    o_tex_sclk                              3.00    3.12   -0.12 (VIOLATED)
+    output44/Z                              3.00    3.12   -0.12 (VIOLATED)
+    o_gpout[2]                              3.00    3.12   -0.12 (VIOLATED)
+    output33/Z                              3.00    3.12   -0.12 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    clkbuf_5_21__f_i_clk/Z                    4     32    -28 (VIOLATED)
+    clkbuf_5_31__f_i_clk/Z                    4     32    -28 (VIOLATED)
+    clkbuf_5_20__f_i_clk/Z                    4     30    -26 (VIOLATED)
+    clkbuf_5_29__f_i_clk/Z                    4     28    -24 (VIOLATED)
+    clkbuf_5_26__f_i_clk/Z                    4     26    -22 (VIOLATED)
+    clkbuf_5_24__f_i_clk/Z                    4     24    -20 (VIOLATED)
+    clkbuf_5_7__f_i_clk/Z                     4     24    -20 (VIOLATED)
+    clkbuf_5_18__f_i_clk/Z                    4     22    -18 (VIOLATED)
+    clkbuf_5_23__f_i_clk/Z                    4     22    -18 (VIOLATED)
+    clkbuf_5_30__f_i_clk/Z                    4     22    -18 (VIOLATED)
+    
+    Showing worst 10 out of 1510
+    
+
+Max caps:
+    
+    
+    None
+    
+
+Hold slack:   openlane/top_raybox_zero_fsm/runs/success-9/reports/signoff/*-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.3895
+
+Antennas:             openlane/top_raybox_zero_fsm/runs/success-9/reports/signoff/*-antenna_violators.rpt
+    
+    
+    None
+    
+
+Step: UPW
+
+SELECTED UPW run:  >>>  success-9  <<<  (openlane/user_project_wrapper/runs/success-9)
+
+|          Design final GDS size |       26M (26608290) |
+|        Design macro dimensions |            2956x2952 |
+|      (summary.py temp run num) |                   17 |
+|                   Flow success |                  Yes |
+|                  total_runtime |               0:2:49 |
+|                   FP_CORE_UTIL |                   50 |
+|              PL_TARGET_DENSITY |                  0.6 |
+|                    OpenDP_Util |                  -1% |
+|               synth_cell_count |                    1 |
+|         net_antenna_violations |                   19 |
+|                            wns |                  0.0 |
+|                            tns |                  0.0 |
+|                  cells_pre_abc |                    1 |
+|                    CoreArea_um |         8724457.9968 |
+|                   NonPhysCells |                    1 |
+|                   CLOCK_PERIOD |                   40 |
+Setup, slews, caps:   openlane/user_project_wrapper/runs/success-9/reports/signoff/*-sta-rcx_nom/multi_corner_sta.checks.rpt
+Unconstrained:
+    Path Type: max
+                                      2.99   slack (MET)
+
+slack_max:
+    No paths found.
+
+Slew, caps, fanout:
+    max slew violations count Typical: 4
+    max fanout violations count Typical: 36
+    max cap violations count Typical: 2
+
+Max slew:
+    Pin                                    Limit    Slew   Slack
+    ------------------------------------------------------------
+    io_out[37]                              3.00    7.64   -4.64 (VIOLATED)
+    top_raybox_zero_fsm/output33/Z          3.00    7.58   -4.58 (VIOLATED)
+    io_out[17]                              3.00    6.35   -3.35 (VIOLATED)
+    top_raybox_zero_fsm/output44/Z          3.00    6.33   -3.33 (VIOLATED)
+    
+    Showing all 4
+    
+
+Fanout:
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/clkbuf_5_21__f_i_clk/Z     10     32    -22 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_31__f_i_clk/Z     10     32    -22 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_20__f_i_clk/Z     10     30    -20 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_29__f_i_clk/Z     10     28    -18 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_26__f_i_clk/Z     10     26    -16 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_24__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_7__f_i_clk/Z     10     24    -14 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_18__f_i_clk/Z     10     22    -12 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_23__f_i_clk/Z     10     22    -12 (VIOLATED)
+    top_raybox_zero_fsm/clkbuf_5_30__f_i_clk/Z     10     22    -12 (VIOLATED)
+    
+    Showing worst 10 out of 38
+    
+
+Max caps:
+    Pin                                    Limit     Cap   Slack
+    ------------------------------------------------------------
+    top_raybox_zero_fsm/output33/Z          0.24    0.48   -0.24 (VIOLATED)
+    top_raybox_zero_fsm/output44/Z          0.24    0.40   -0.16 (VIOLATED)
+    
+    Showing all 2
+    
+
+Hold slack:   openlane/user_project_wrapper/runs/success-9/reports/signoff/*-sta-rcx_nom/multi_corner_sta.min.rpt
+    worst slack corner Typical: 0.5395
+
+Antennas:             openlane/user_project_wrapper/runs/success-9/reports/signoff/*-antenna_violators.rpt
+    Partial/Required:  2.74, Required:    400.0, Partial:  1097.12, Net: io_in[34], Pin: top_raybox_zero_fsm/i_mode[2], Layer: Metal3
+    Partial/Required:  2.68, Required:    400.0, Partial:  1071.64, Net: io_in[30], Pin: top_raybox_zero_fsm/i_debug_trace_overlay, Layer: Metal3
+    Partial/Required:  2.66, Required:    400.0, Partial:  1065.35, Net: io_in[29], Pin: top_raybox_zero_fsm/i_debug_map_overlay, Layer: Metal3
+    Partial/Required:  2.65, Required:    400.0, Partial:  1059.38, Net: io_in[28], Pin: top_raybox_zero_fsm/i_debug_vec_overlay, Layer: Metal3
+    Partial/Required:  2.59, Required:    400.0, Partial:  1034.36, Net: io_in[31], Pin: top_raybox_zero_fsm/i_reg_outs_enb, Layer: Metal3
+    Partial/Required:  2.58, Required:    400.0, Partial:   1033.9, Net: io_in[24], Pin: top_raybox_zero_fsm/i_vec_mosi, Layer: Metal3
+    Partial/Required:  2.53, Required:    400.0, Partial:  1010.21, Net: io_in[27], Pin: top_raybox_zero_fsm/i_reg_mosi, Layer: Metal3
+    Partial/Required:  2.51, Required:    400.0, Partial:  1004.18, Net: io_in[26], Pin: top_raybox_zero_fsm/i_reg_sclk, Layer: Metal3
+    Partial/Required:  2.11, Required:    400.0, Partial:   845.49, Net: io_in[24], Pin: top_raybox_zero_fsm/i_vec_mosi, Layer: Metal2
+    Partial/Required:  2.10, Required:    400.0, Partial:   838.47, Net: io_in[23], Pin: top_raybox_zero_fsm/i_vec_sclk, Layer: Metal3
+    
+    Showing worst 10 out of 24
+```
+
+NOTE: Despite no doubt changing the placement/routing a lot, this doesn't seem to make much difference, though it does bring down the worst antenna a little.
+
+In a combined design, I will probably benefit from having a mux macro: It can shorten UPW wires, route things differently, and maybe offer extra buffering?
+
+
 # COMPARISONS OF TONIGHT'S RESULTS
 
 *   success-3 vs success-2
@@ -1551,4 +1725,15 @@ echo "=== testB ==="; pushd openlane/top_raybox_zero_fsm && rm config.json; ln -
 # Other stuff to think about
 
 *   If I want to run rbz-combo at a much slower clock speed (in order to be able to just drop it in) I might need to have separate SDC config for its clock, or just make the whole UPW clock target a lot slower. Distinction between `base_` and `signoff` SDCs?
+
+
+# Next steps
+
+*   Well, the design hardens, despite bad caps/slews...
+*   Create the efabless combo repo, and copy in the main files. Document what gets copied, and how.
+*   Run precheck, push to efabless, do necessary steps, and start submission.
+*   Then...
+*   Rename outer pins for direct connection; update SDC accordingly.
+*   Create mux block.
+*   Copy in another of my designs, e.g. solo_squash.
 
