0185: Quick notes on sharing the GFMPW-1 submission

--- a/0185-2023-12-06.md
+++ b/0185-2023-12-06.md
@@ -4,6 +4,12 @@
 |-|-|
 | [**0184**-2023-12-05.md](./0184-2023-12-05.md) | *Next journal TBA* |
 
+# Quick notes on sharing the GFMPW-1 submission
 
+*   Need to move on from gf180-rbz-fsm. It hardens, even if there are slew/fanout/cap issues. Try and tweak it later, but for now just get it in with a mux.
+    *   Still should TRY to improve the rcp/shmul FSMs.
 *   Do a very simple proof-of-life macro, maybe one on the mux, and another bypassing the mux
 *   Do a simple WB design (since I think it can be shared without muxing?)
+*   While a WB mux would've been nice, I want to stick to what I know and understand right now. Thus, I will first try an LA-controlled mux. There's something key though:
+    *   I want reset to be driven by wb_rst_i, because I don't trust using an LA pin for reset (given timing issues). I will still have one, but want wb_rst_i to still work.
+    *   The problem is that wb_rst_i is the system reset, which will also reset the LA, so the mux needs to *survive* that. Hence, it probably needs some registers.
